# dominion

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COST.md  DEPLOYMENT.md  GROUNDING.md  MODES.md  Makefile  README.md  SAFETY.md  SECURITY.md  SIMULATION.md  WORLDFORGE.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  e2e.yml
backend/: Dockerfile
backend/app/: main.py
backend/app/api/: routes.py  schemas.py
backend/app/community/: service.py
backend/app/db/: migrate.py  seed.py
backend/app/moderation/: policy.py
backend/app/providence/: blessings_curses.py  disasters.py  grounding_engine.py  omens.py
backend/app/quota/: service.py
backend/app/simulation/: archive_engine.py  chronicle_log.py  clock.py  models.py  rewind.py  state_projection.py
backend/app/throne/: chancellor.py  decrees.py
backend/app/worldforge/: editor.py
backend/app/worldgen/: presets.py
backend/app/worldmind/: client.py
backend/tests/: test_api_routes.py  test_config.py  test_grounding_engine.py  test_simulation.py
backend/workers/: local_worker.py
docs/: REQUIREMENTS_AUDIT.md
fixtures/llm_responses/: grounding_dragon_high_magic.json
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts
frontend/src/: App.test.tsx  App.tsx  data.ts  store.ts  styles.css
frontend/tests/e2e/: core-flow.spec.ts
infra/: docker-compose.yml
