[project]
name = "dominion-backend"
version = "0.1.0"
description = "AI-assisted sovereign rule and divine sandbox simulation backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["backend.app"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
